# Block-On

./: .gitignore  CMakeLists.txt  README.md  block_on.py
Test/: Test.cpp  Test.vcxproj  Test.vcxproj.filters
block-on/: block-on.sln  block-on.vcxproj  block-on.vcxproj.filters
block-on/src/: block_on.cpp  main.py  math.h  octree.h  util.h  voxelization.hpp
block-on/x64/Debug/: block-on.exe.recipe  block-on.vcxproj.FileListAbsolute.txt  vc142.idb
block-on/x64/Debug/block-on.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  block-on.lastbuildstate
block-on/x64/Release/: block-on.vcxproj.FileListAbsolute.txt  block_on.dll.recipe  block_on.exp  block_on.iobj  block_on.ipdb  block_on.lib  main.py
block-on/x64/Release/block_on.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  block_on.lastbuildstate  block_on.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
cpp/: CMakeLists.txt
python/: block_on.cpp  main.py
src/: block_on-3-1.py  block_on.py
